--- a/src/Views/layouts/base.twig
+++ b/src/Views/layouts/base.twig
@@ -20,7 +20,22 @@
     </main>
 
     {% include 'layouts/partial/footer.twig' %}
+
+    {# JS global #}
     <script src="/assets/js/global.js"></script>
     {% block scripts %}{% endblock %}
+
+    {# VLibras Plugin para acessibilidade em Libras #}
+    <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+            <div class="vw-plugin-top-wrapper"></div>
+        </div>
+    </div>
+    <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+    <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+    </script>
+
 </body>
 </html>
